--- a/Ohtaigi.html
+++ b/Ohtaigi.html
@@ -323,7 +323,8 @@
     <aside>
       <h3 class="sub-title">類別</h3>
       <ul class="sub-menu">
-        
+          
+          <li><a href="https://books.i-yuida.com.tw/">台語電子書</a></li>
           <li><a href="https://guidephy.github.io/taigitest.html">台語拼音聽寫測驗</a></li>
           <li><a href="https://tycedu.padlet.org/tyc1255/padlet-szlkey1zp65yljaj">外送補充教材</a></li>
           <li><a href="https://www.canva.com/design/DAG4cYujTyM/atpJGDmmU1XRYwRiKrzIew/view?utm_content=DAG4cYujTyM&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h65b4e83e18">上課手機使用規定</a></li>
