--- a/nav.html
+++ b/nav.html
@@ -43,6 +43,7 @@
             <a href="https://guidephy.github.io/111ceproject.html">碳捕捉暨Na循環發電IoT系統</a>
             <a href="https://guidephy.notion.site/Learn-to-Create-An-RPG-Game-In-Unity-Tutorial-Udemy-e1e79f20d692448b86fd4fc740aac94b?pvs=4">unity2D學習筆記</a>
             <a href="https://guidephy.notion.site/Unity-Learning-d45d104ccbf34dcaa15c937affee7546">unity3D學習筆記</a>
+            <a href="https://script.google.com/macros/s/AKfycbwtLDiDKGznGGde4OWdxMVG9HV9TEkR5sPfYnsO3UxjvUTpELlgzAVFBQMZFvOsLzWP/exec">單字卡複習</a>
             <a href="https://docs.google.com/document/d/e/2PACX-1vTLQ1xpkzCLlnxey7UzqvJdGaHpV50vPvpjRoxxB1K4Qmk1U2aSMBBNyJjgNe15gnFuGmo8iwLmaDOd/pub">google文件範例</a>
           </div>
         </li>
