--- a/WebDesign.html
+++ b/WebDesign.html
@@ -190,7 +190,7 @@
     <aside>
       <h3 class="sub-title">類別</h3>
       <ul class="sub-menu">
-         <li><a href="physics.html">物理學習</a></li>
+         <li><a href="https://tycedu.padlet.org/tyc1255/padlet-tne9bk766ux6i1w0">Padlet內容</a></li>
          <li><a href="program.html">程式語言</a></li>
          <li><a href="exp.html">科學實驗</a></li>
          <li><a href="#">讀書心得</a></li>
