--- a/WebDesign.html
+++ b/WebDesign.html
@@ -191,9 +191,8 @@
       <h3 class="sub-title">類別</h3>
       <ul class="sub-menu">
          <li><a href="https://tycedu.padlet.org/tyc1255/padlet-tne9bk766ux6i1w0">Padlet內容</a></li>
-         <li><a href="program.html">程式語言</a></li>
-         <li><a href="exp.html">科學實驗</a></li>
-         <li><a href="#">讀書心得</a></li>
+         <li><a href="https://drive.google.com/drive/folders/1F7dzFvLZ7xEAbQCbDs9IXlFNSomXfo3V?usp=sharing">檔案連結</a></li>
+        
       </ul>
 
       <h3 class="sub-title">About Me</h3>
