--- a/physics.html
+++ b/physics.html
@@ -574,7 +574,7 @@
          <li><a href="https://drive.google.com/drive/folders/1C2_FuqEmGk-B84c1rZVpLKzp0a8Guxmb?usp=sharing">課程檔案</a></li>
          <li><a href="https://guidephy.github.io/physicsReview.html">高三複習</a></li>
          <li><a href="https://guidephy.github.io/Ophysics">Guidephy物理自學</a></li>
-         <li><a href="https://adl.edu.tw/HomePage/home/">因材網</a></li>
+         <li><a href="SA/magneticEffectOfCurrent.html">電流磁應應</a></li>
          <li><a href="https://script.google.com/macros/s/AKfycbwhsdnsDOsKRAtiwTSSxchIYifvC8vXZzNjeg51riDWFkZMHOaw3_D6muakQsFzqOOw/exec">多功能教室</a></li>
         
       </ul>
@@ -605,6 +605,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
