--- a/physics.html
+++ b/physics.html
@@ -575,6 +575,7 @@
          <li><a href="https://guidephy.github.io/physicsReview.html">高三複習</a></li>
          <li><a href="https://guidephy.github.io/Ophysics">Guidephy物理自學</a></li>
          <li><a href="/SA/magneticEffectOfCurrent .html">電流磁效應</a></li>
+        <li><a href="/SA/ElectromagneticInduction.html">電磁感應</a></li>
          <li><a href="https://script.google.com/macros/s/AKfycbwhsdnsDOsKRAtiwTSSxchIYifvC8vXZzNjeg51riDWFkZMHOaw3_D6muakQsFzqOOw/exec">多功能教室</a></li>
         
       </ul>
@@ -605,6 +606,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
