--- a/Ohtaigi.html
+++ b/Ohtaigi.html
@@ -289,7 +289,7 @@
       <ul class="sub-menu">
           
           <li><a href="https://books.i-yuida.com.tw/">台語電子書</a></li>
-          <li><a href="https://twbangga.moe.edu.tw/front/classification">台語動畫</a></li>
+          <li><a href="https://twbangga.moe.edu.tw/animation/84E43C2D-7AA4-F011-BC9A-005056B2D58D">台語動畫</a></li>
           <li><a href="https://guidephy.github.io/taigitest.html">台語拼音聽寫測驗</a></li>
           <li><a href="https://tycedu.padlet.org/tyc1255/padlet-szlkey1zp65yljaj">外送補充教材</a></li>
           <li><a href="https://www.canva.com/design/DAG4cYujTyM/atpJGDmmU1XRYwRiKrzIew/view?utm_content=DAG4cYujTyM&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h65b4e83e18">上課手機使用規定</a></li>
